--- a/app/src/main/res/layout/activity_log_exercise_compat.xml
+++ b/app/src/main/res/layout/activity_log_exercise_compat.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/contraint_layout"
+    android:id="@+id/top"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activities.LogExerciseActivity"
     tools:layout_editor_absoluteY="81dp">
 
@@ -18,139 +19,117 @@
         android:layout_marginBottom="8dp"
         android:visibility="gone" />
 
-    <LinearLayout
+    <TableLayout
         android:id="@+id/exercise_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="2"
+        android:gravity="center_vertical"
+        android:padding="32dp"
+        android:stretchColumns="2">
 
-        <LinearLayout
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:layout_height="match_parent">
 
+            <TextView
+                android:id="@+id/exerciseTypeLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_weight="1"
+                android:text="@string/exercise_examples"
+                app:layout_constraintTop_toBottomOf="@+id/exerciseType" />
 
             <EditText
                 android:id="@+id/exerciseType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="@string/exercise_type"
-                app:layout_constraintStart_toStartOf="@+id/textView12"
+                app:layout_constraintStart_toStartOf="@+id/exerciseTypeLabel"
                 app:layout_constraintTop_toTopOf="parent" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="16dp">
 
             <TextView
-                android:id="@+id/textView12"
+                android:id="@+id/minutesLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/exercise_examples"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_column="1"
+                android:layout_weight="1"
+                android:text="@string/exercise_minutes"
                 app:layout_constraintTop_toBottomOf="@+id/exerciseType" />
 
             <EditText
                 android:id="@+id/minutes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="7dp"
-                android:layout_marginRight="7dp"
-                android:layout_marginTop="6dp"
+                android:layout_column="2"
+                android:layout_weight="1"
                 android:hint="@string/minutes"
                 android:inputType="number"
-                app:layout_constraintTop_toBottomOf="@+id/textView12" />
+                app:layout_constraintTop_toBottomOf="@+id/exerciseTypeLabel" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="16dp">
 
             <Button
                 android:id="@+id/submitButton"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_column="2"
                 android:layout_gravity="end"
-                android:layout_marginEnd="48dp"
-                android:layout_marginRight="48dp"
-                android:layout_marginTop="12dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:layout_weight="1"
                 android:background="@android:color/holo_green_light"
-                android:text="@string/submit"/>
-            <!--android:drawableRight="@drawable/ic_save_white_24dp"-->
-            <!--android:drawableEnd="@drawable/ic_save_white_24dp"-->
-
-            <!--<Button-->
-            <!--android:id="@+id/submitButton"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginLeft="36dp"-->
-            <!--android:layout_marginStart="36dp"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:text="Submit"-->
-            <!--app:layout_constraintStart_toStartOf="@+id/button5"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/minutes" />-->
-
-            <!--<Button-->
-            <!--android:id="@+id/view_latest"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginLeft="3dp"-->
-            <!--android:layout_marginStart="3dp"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:text="View Latest Entry"-->
-            <!--app:layout_constraintStart_toStartOf="@+id/button6"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/submitButton" />-->
-
-            <!--<Button-->
-            <!--android:id="@+id/button6"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="11dp"-->
-            <!--android:text="View Entry History"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintHorizontal_bias="0.502"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/button5" />-->
-
-        </LinearLayout>
+                android:text="@string/submit" />
+        </TableRow>
+    </TableLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_margin="12dp"
-            android:layout_weight="1"
-            android:gravity="bottom|center_horizontal"
-            android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_margin="12dp"
+        android:layout_weight="1"
+        android:gravity="bottom|center_horizontal"
+        android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/view_latest"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:background="@android:color/holo_blue_dark"
-                android:text="@string/view_latest_entry" />
-            <!--android:drawableRight="@drawable/ic_last_page_white_24dp"-->
-            <!--android:drawableEnd="@drawable/ic_last_page_white_24dp"-->
+        <Button
+            android:id="@+id/view_latest"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@android:color/holo_blue_dark"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="@string/view_latest_entry" />
+        <!--android:drawableRight="@drawable/ic_last_page_white_24dp"-->
+        <!--android:drawableEnd="@drawable/ic_last_page_white_24dp"-->
 
-            <Button
-                android:id="@+id/view_history"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:background="@android:color/holo_purple"
-                android:text="@string/view_entry_history" />
-            <!--android:drawableRight="@drawable/ic_history_white_24dp"-->
-            <!--android:drawableEnd="@drawable/ic_history_white_24dp"-->
-
-        </LinearLayout>
+        <Button
+            android:id="@+id/view_history"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_purple"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="@string/view_entry_history" />
+        <!--android:drawableRight="@drawable/ic_history_white_24dp"-->
+        <!--android:drawableEnd="@drawable/ic_history_white_24dp"-->
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
