--- a/app/src/main/res/layout/activity_log_glucose.xml
+++ b/app/src/main/res/layout/activity_log_glucose.xml
@@ -46,8 +46,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="center_vertical"
             android:padding="32dp"
-            android:stretchColumns="1">
+            android:stretchColumns="1"
+            android:layout_weight="2">
 
             <TableRow
                 android:layout_width="match_parent"
